--- a/c-legacy-releases/2023/09132023.md
+++ b/c-legacy-releases/2023/09132023.md
@@ -7,9 +7,9 @@ author: mfrei
 mini-toc-levels: 2
 exl-id: f56478de-79d0-4bfe-9468-e6f6619dd814
 source-git-commit: fa7494e85ecd363d33a9cceceba5b01f82353495
-workflow-type: tm+mt
+workflow-type: ht
 source-wordcount: '5789'
-ht-degree: 98%
+ht-degree: 100%
 
 ---
 
@@ -27,7 +27,7 @@ ht-degree: 98%
 
 **需要協助嗎?**
 
-登入 [Experience League](https://experienceleague.adobe.com/zh-hant#home)，在 Adobe 自助資源庫中自訂您的搜尋體驗。 瀏覽所有級別和角色的[產品文件](https://experienceleague.adobe.com/docs/?lang=zh-Hant)、[教學課程影片](https://experienceleague.adobe.com/docs/home-tutorials.html?lang=zh-Hant)、[課程](https://experienceleague.adobe.com/zh-hant#courses)和[活動](https://experienceleague.adobe.com/events/?lang=zh-Hant)。向您的同業[社群](https://experienceleaguecommunities.adobe.com/?profile.language=en)提問，並在您最需要時獲得專家[支援](https://experienceleague.adobe.com/zh-hant?support-tab=home#support)。
+登入 [Experience League](https://experienceleague.adobe.com/#home)，在 Adobe 自助資源庫中自訂您的搜尋體驗。 瀏覽所有級別和角色的[產品文件](https://experienceleague.adobe.com/docs/)、[教學課程影片](https://experienceleague.adobe.com/docs/home-tutorials.html?lang=zh-Hant)、[課程](https://experienceleague.adobe.com/#courses)和[活動](https://experienceleague.adobe.com/events/)。向您的同業[社群](https://experienceleaguecommunities.adobe.com/?profile.language=en)提問，並在您最需要時獲得專家[支援](https://experienceleague.adobe.com/?support-tab=home#support)。
 
 ## 產品發行更新和活動
 
@@ -60,9 +60,9 @@ ht-degree: 98%
 * [Digital Experience 藍圖](#blueprints)
 * [Adobe 產品安全性漏洞](https://helpx.adobe.com/tw/security.html)
 
-## ![圖示](/assets/experience-league.png) [!DNL Experience League]活動與最新訊息 {#events}
+## ![圖示](/assets/experience-league.png)[!DNL Experience League]活動和更新 {#events}
 
-了解 Experience League 上的精彩活動。 若要向 Adobe 產品專家學習、與之互動或獲得解答，這是您絕佳的選擇！
+了解 Experience League 上的精彩活動。 這裡是您向 Adobe 產品專家學習、與之互動或獲得解答的最佳場所！
 
 | 發佈日期 | 應用程式 | 名稱 | 類型 | 說明 |
 | -----------| ---------- | ---------- | ---------- |---------- |
@@ -75,7 +75,7 @@ ht-degree: 98%
 
 +++即將推出的 Experience League 活動
 
-請查看 [Experience League 活動](https://experienceleague.adobe.com/events/?lang=zh-Hant)取得即將到來的活動和隨選即播的過去活動的完整時間表。
+請查看 [Experience League 活動](https://experienceleague.adobe.com/events/)取得即將到來的活動和隨選即播的過去活動的完整時間表。
 
 +++
 
@@ -101,7 +101,7 @@ ht-degree: 98%
 
 +++詳細資訊
 
-[!DNL Adobe System Status] 會提供有關 Adobe 產品的詳細資訊、狀態更新和電子郵件通知。獲得有關服務中斷、作業中斷和維護事件的通知。請造訪 [status.adobe.com](https://status.adobe.com/) 來查看。
+[!DNL Adobe System Status] 提供有關 Adobe 產品的詳細資訊、狀態更新和電子郵件通知。收到有關服務中斷、作業中斷和維護事件的通知。請前往 [status.adobe.com](https://status.adobe.com/) 了解詳情。
 
 有關最近的功能更新，請參閱：
 
@@ -123,7 +123,7 @@ ht-degree: 98%
 
 ## ![圖示](/assets/experience_platform_appicon_24.png) [!DNL Experience Platform] {#platform}
 
-尋找 [!DNL Experience Platform] 和 [!UICONTROL Mobile SDK] 的最新發行資訊和新文件。查看 Experience League 上的新教學課程和知識庫。
+尋找 [!DNL Experience Platform] 和 [!UICONTROL Mobile SDK] 的最新發行資訊和新文件。檢視 Experience League 上的新教學課程和知識庫。
 
 +++詳細資訊
 
@@ -250,17 +250,17 @@ New articles and updates to existing articles for [!DNL Audience Manager].
 
 | Published | Name | Type | Description |
 | -----------| ---------- | ---------- | ---------- |
-| August 2023 | [linktext](https://experienceleague.adobe.com/zh-hant?lang=en#home) |Video | Description |
-| August 2023 | [linktext](https://experienceleague.adobe.com/zh-hant?lang=en#home) |Video | Description |
-| August 2023 | [linktext](https://experienceleague.adobe.com/zh-hant?lang=en#home) |Video | Description |
-| August 2023 | [linktext](https://experienceleague.adobe.com/zh-hant?lang=en#home) |Video | Description |
-| August 2023 | [linktext](https://experienceleague.adobe.com/zh-hant?lang=en#home) |Video | Description |
-| August 2023 | [linktext](https://experienceleague.adobe.com/zh-hant?lang=en#home) |Video | Description |
-| August 2023 | [linktext](https://experienceleague.adobe.com/zh-hant?lang=en#home) |Video | Description |
+| August 2023 | [linktext](https://experienceleague.adobe.com/?lang=en#home) |Video | Description |
+| August 2023 | [linktext](https://experienceleague.adobe.com/?lang=en#home) |Video | Description |
+| August 2023 | [linktext](https://experienceleague.adobe.com/?lang=en#home) |Video | Description |
+| August 2023 | [linktext](https://experienceleague.adobe.com/?lang=en#home) |Video | Description |
+| August 2023 | [linktext](https://experienceleague.adobe.com/?lang=en#home) |Video | Description |
+| August 2023 | [linktext](https://experienceleague.adobe.com/?lang=en#home) |Video | Description |
+| August 2023 | [linktext](https://experienceleague.adobe.com/?lang=en#home) |Video | Description |
 
 {style="table-layout:auto"}
 
-For self-help resources, see [Audience Manager documentation and tutorials](https://experienceleague.adobe.com/docs/audience-manager.html?lang=zh-Hant) on Experience League.
+For self-help resources, see [Audience Manager documentation and tutorials](https://experienceleague.adobe.com/docs/audience-manager.html) on Experience League.
 
  -->
 
@@ -307,7 +307,7 @@ _新功能_
 
 _資產檢視中的新功能_
 
-* **從資料來源大量匯入資產** – 管理員現在可以將資料來源的[多個資產匯入](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/assets/assets-view/bulk-import-assets-view.html?lang=zh-Hant) AEM Assets。管理員不再需要將個別資產或資料夾上傳到AEM Assets。 大量匯入支援的資料來源包括Azure、AWS、Google Cloud和Dropbox。
+* **從資料來源大量匯入資產** – 管理員現在可以將資料來源的[多個資產匯入](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/assets/assets-view/bulk-import-assets-view.html?lang=zh-Hant) AEM Assets。管理員不再需要將個別資產或資料夾上傳至 AEM Assets。支援大量匯入的資料來源包括 Azure、AWS、Google 雲端以及 Dropbox。
 * **由 Adobe Express 提供技術支援的影像編輯工具** – 簡單直觀的[影像編輯工具是由 Adobe Express 提供技術支援，](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/assets/assets-view/edit-images-assets-view.html?lang=zh-Hant)可直接在 AEM Assets 中使用，以增加內容重複使用性並加快內容流通速度。
 * **為「我的工作區」的「快速存取」釘選項目時的靈活性** – 能夠為您的組織或群組清單選擇和釘選項目，以便它們顯示在[「我的工作區」的「快速存取」部分](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/assets/assets-view/my-workspace-assets-view.html?lang=zh-Hant)。
 
@@ -346,8 +346,8 @@ _搶鮮版管道的新功能_
 
 使用 [Headless 調適型表單](https://experienceleague.adobe.com/docs/experience-manager-headless-adaptive-forms/using/overview.html?lang=zh-Hant)可讓開發人員建立、發佈和管理可透過 API 存取和互動的互動式表單，而不是透過傳統的圖形使用者介面。Headless 調適型表單可協助您：
 
-* 以您選擇的程式語言建置高品質的多管道表單
-* 以原生方式將表單整合至您的案頭和行動應用程式、網站和聊天應用程式
+* 使用您選擇的程式語言建置高品質的多管道表單
+* 以原生方式將表單整合至您的桌面和行動應用程式、網站以及聊天應用程式
 * 在表單應用程式中重複使用您的專屬使用者介面元件
 * 使用 AEM Forms 的強大功能
 
@@ -361,9 +361,9 @@ _搶鮮版管道的新功能_
    * 要求的標頭和屬性 (例如 IP 位址)
    * 與惡意流量相關聯的已知流量模式
 
-  有興趣嘗試該功能並分享回饋意見嗎？若要深入了解早期採用者計劃，請從您的官方電子郵件 ID 寄送電子郵件到 [aemcs-waf-adopter@adobe.com](mailto:aemcs-waf-adopter@adobe.com)。空間有限。
+  有興趣嘗試該功能並分享回饋意見嗎？若要深入了解早期採用者計劃，請從您的官方電子郵件 ID 寄送電子郵件到 [aemcs-waf-adopter@adobe.com](mailto:aemcs-waf-adopter@adobe.com)。名額有限。
 
-  在文章[此處](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/security/cdn-and-waf-rules.html?lang=zh-Hant)中進一步瞭解此功能。
+  若要深入了解此功能，請點選[這裡](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/security/cdn-and-waf-rules.html?lang=zh-Hant)參閱文章。
 
 ### [!DNL Cloud Manager]
 
@@ -398,8 +398,8 @@ _早期採用者計劃_
 * 現在起，觸發[複製內容](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/implementing/developer-tools/content-copy.html?lang=zh-Hant)強制回應之後就會關閉「環境」選單。
 * 如果前一個執行在建置階段狀態上未設定 commitId，就不會再允許[管道重新執行](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/implementing/using-cloud-manager/deploy-code.html?lang=zh-Hant#reexecute-deployment)。
 * 使用者在「活動」或「管道」畫面選取管道時，如果出現不常見的錯誤，現在會顯示更容易理解的訊息。
-* `contentSetName`值在記錄中不再遺失，現在在啟動[內容複製](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/implementing/developer-tools/content-copy.html?lang=zh-Hant)作業時，會提供在輸入中。
-* 在某些罕見情況下，不再可以從同一管道開始兩個執行，導致「卡住」狀態。
+* 記錄中不再缺少 `contentSetName` 值，現在啟動[內容複製](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/implementing/developer-tools/content-copy.html?lang=zh-Hant)作業時，在輸入中便會提供該值。
+* 在特定的少數情況下，從同一個管道啟動執行兩次，以致於造成「停滯」狀態的情況不再可能發生。
 * 憑證到期時，與該憑證相關聯的網域名稱和 IP 允許清單不會再從 CDN 中移除。
    * 在這種情況下，網站仍接受訪客造訪。
 * 將 Sites 作為解決方案新增到僅限 Assets 的計劃時，AEM 無法存取發佈端點的問題已修正。
@@ -507,8 +507,8 @@ Learn more about [[!DNL Experience Manager Guides]](https://business.adobe.com/p
 
 ### Additional resources
 
-* [[!DNL Experience Manager Guides]](https://experienceleague.adobe.com/docs/experience-manager-guides-learn/videos/overview.html?lang=zh-Hant) - tutorials on Experience League
-* [[!DNL Experience Manager Guides] Learn & Support](https://helpx.adobe.com/tw/support/xml-documentation-for-experience-manager.html) - product documentation -->
+* [[!DNL Experience Manager Guides]](https://experienceleague.adobe.com/docs/experience-manager-guides-learn/videos/overview.html) - tutorials on Experience League
+* [[!DNL Experience Manager Guides] Learn & Support](https://helpx.adobe.com/support/xml-documentation-for-experience-manager.html) - product documentation -->
 
 ## ![圖示](/assets/ec_appicon_24.png) [!DNL Adobe Commerce] {#commerce}
 
@@ -547,7 +547,7 @@ Adobe Commerce 的新文章和現有文章的更新。
 | 2023 年 8 月 | [[!DNL USPS Ground Advantage] 運送方式支援 Hotfix (適用於  [!DNL AC-9182])](https://experienceleague.adobe.com/docs/commerce-knowledge-base/kb/troubleshooting/known-issues-patches-attached/usps-ground-advantage-shipping-method-support-hotfix-for-ac-9182.html?lang=zh-Hant) | 新文章 | 了解可在 Adobe Commerce 2.4.4 - 2.4.6-p2 中解決 [!DNL AC-9182] (新 [!DNL USPS Ground Advantage] 運送方式) 問題的修補程式。 |
 | 2023 年 8 月 | [_[!DNL Error opensearch search engine doesn't exist. Falling back to livesearch.]_](https://experienceleague.adobe.com/docs/commerce-knowledge-base/kb/troubleshooting/miscellaneous/error-opensearch-search-engine-doesnt-exist-falling-back-to-livesearch.html?lang=zh-Hant) | 新文章 | 了解在 Adobe Commerce 中顯示以下錯誤時的問題解決方案：_[!DNL Error: opensearch search engine doesn't exist. Falling back to livesearch.]_(在使用 [!DNL Live Search] 的雲端基礎結構上)。 |
 | 2023 年 8 月 | [[!DNL JQuery UI] 安全性漏洞修正  [!DNL CVE-2022-31160] (適用於 2.4.4、2.4.5 和 2.4.6 版本)](https://experienceleague.adobe.com/docs/commerce-knowledge-base/kb/troubleshooting/known-issues-patches-attached/jquery-cve-2022-31160-fix-2.4.4-2.4.5-2.4.6.html?lang=zh-Hant) | 新文章 | 了解有關回報之安全性漏洞 [!DNL CVE-2022-31160] (針對 [!DNL jQuery-UI] 程式庫版本 1.13.1) 的資訊；該版本是在 Adobe Commerce 2.4.4、2.4.5 和 2.4.6 中作為相依性使用。 |
-| 2023 年 8 月 | [減少在 2.4.6 升級之前顯示已過期 _[!DNL oauth_tokens]_&#x200B;的數量](https://experienceleague.adobe.com/docs/commerce-knowledge-base/kb/troubleshooting/installation-and-upgrade/reduce-expired-oauth-tokens-before-2.4.6-upgrade.html?lang=zh-Hant) | 新文章 | 了解顯示多個 *[!DNL oauth_tokens]* (在 *[!DNL oauth_token]* 表格中) 之問題的解決方案；該問題可能會導致升級到版本 2.4.6 時發生長時間延遲。 |
+| 2023 年 8 月 | [減少在 2.4.6 升級之前顯示已過期 _[!DNL oauth_tokens]_的數量](https://experienceleague.adobe.com/docs/commerce-knowledge-base/kb/troubleshooting/installation-and-upgrade/reduce-expired-oauth-tokens-before-2.4.6-upgrade.html?lang=zh-Hant) | 新文章 | 了解顯示多個 *[!DNL oauth_tokens]* (在 *[!DNL oauth_token]* 表格中) 之問題的解決方案；該問題可能會導致升級到版本 2.4.6 時發生長時間延遲。 |
 | 2023 年 8 月 | [提交不正確的檔案時出現部署錯誤](https://experienceleague.adobe.com/docs/commerce-knowledge-base/kb/troubleshooting/deployment/deployment-error-when-committing-incorrect-files.html?lang=zh-Hant) | 新文章 | 了解解決方案：將不應新增的檔案/資料夾提交至存放庫所導致的部署錯誤問題。 |
 | 2023 年 8 月 | [Adobe Commerce 2024 發佈排程](https://experienceleague.adobe.com/docs/commerce-knowledge-base/kb/announcements/commerce-announcements/2024-release-schedule.html?lang=zh-Hant) | 新文章 | 了解我們更新的 2023 年發佈策略，以擴大支援範圍、提供更多安全性更新，並加速創新採用。 |
 | 2023 年 8 月 | [[!DNL Admin] 登入無法運作 - 超出允許的最大工作階段](https://experienceleague.adobe.com/docs/commerce-knowledge-base/kb/troubleshooting/miscellaneous/admin-login-not-working-allowed-session-max-size-exceed.html?lang=zh-Hant) | 新文章 | 了解解決方案：嘗試登入 [!DNL Admin] 面板時，表單卻剛好重新整理，使得您無法登入。 |
@@ -616,7 +616,7 @@ Adobe Commerce 的新文章和現有文章的更新。
 
 ## ![圖示](/assets/experience_platform_appicon_24.png) [!DNL Journey Optimizer] {#journey-opt}
 
-了解關於 [!DNL Journey Optimizer] 的最新發行資訊。在 Experience League 上查看最新的教學課程和知識庫支援文章。
+了解關於 [!DNL Journey Optimizer] 的最新發行資訊。在 Experience League 上檢視最新的教學課程和知識庫支援文章。
 
 +++詳細資訊
 
@@ -762,7 +762,7 @@ Last updated: **August 9, 2022**
 
 >[!NOTE]
 >
->_[!DNL Adobe Primetime]_&#x200B;現在稱為&#x200B;_[!DNL Adobe Pass]_。在品牌重塑工作完成之前，您近期可能會在文件中看到這兩個品牌名稱。
+>_[!DNL Adobe Primetime]_現在稱為_[!DNL Adobe Pass]_。在品牌重塑工作完成之前，您近期可能會在文件中看到這兩個品牌名稱。
 
 請參閱 [Adobe Pass 發行說明](https://experienceleague.adobe.com/docs/primetime/release-notes/home.html?lang=zh-Hant)以找到特定版本的資訊、系統需求、限制、已修正的問題和已知問題。
 
@@ -772,7 +772,7 @@ Last updated: **August 9, 2022**
 
 >[!NOTE]
 >
->**品牌更新：**&#x200B;_Adobe Document Services_&#x200B;現在是 _Adobe Acrobat Services_。請在[這裡](https://blog.developer.adobe.com/adobe-document-services-is-now-adobe-acrobat-services-f8e3e506b7b1)了解相關內容。
+>**品牌更新：**_Adobe Document Services_&#x200B;現在是 _Adobe Acrobat Services_。請在[這裡](https://blog.developer.adobe.com/adobe-document-services-is-now-adobe-acrobat-services-f8e3e506b7b1)了解相關內容。
 
 +++詳細資訊
 
