--- a/c-legacy-releases/2023/10042023.md
+++ b/c-legacy-releases/2023/10042023.md
@@ -7,9 +7,9 @@ author: mfrei
 mini-toc-levels: 2
 exl-id: be5a9ab0-ab66-49de-885e-88bad6ab8985
 source-git-commit: fa7494e85ecd363d33a9cceceba5b01f82353495
-workflow-type: tm+mt
+workflow-type: ht
 source-wordcount: '6062'
-ht-degree: 98%
+ht-degree: 100%
 
 ---
 
@@ -29,7 +29,7 @@ ht-degree: 98%
 
 **需要協助嗎?**
 
-登入 [Experience League](https://experienceleague.adobe.com/zh-hant#home)，在 Adobe 自助資源庫中自訂您的搜尋體驗。 瀏覽所有級別和角色的[產品文件](https://experienceleague.adobe.com/docs/?lang=zh-Hant)、[教學課程影片](https://experienceleague.adobe.com/docs/home-tutorials.html?lang=zh-Hant)、[課程](https://experienceleague.adobe.com/zh-hant#courses)和[活動](https://experienceleague.adobe.com/events/?lang=zh-Hant)。向您的同業[社群](https://experienceleaguecommunities.adobe.com/?profile.language=en)提問，並在您最需要時獲得專家[支援](https://experienceleague.adobe.com/zh-hant?support-tab=home#support)。
+登入 [Experience League](https://experienceleague.adobe.com/#home)，在 Adobe 自助資源庫中自訂您的搜尋體驗。 瀏覽所有級別和角色的[產品文件](https://experienceleague.adobe.com/docs/)、[教學課程影片](https://experienceleague.adobe.com/docs/home-tutorials.html?lang=zh-Hant)、[課程](https://experienceleague.adobe.com/#courses)和[活動](https://experienceleague.adobe.com/events/)。向您的同業[社群](https://experienceleaguecommunities.adobe.com/?profile.language=en)提問，並在您最需要時獲得專家[支援](https://experienceleague.adobe.com/?support-tab=home#support)。
 
 ## 產品發行更新和活動
 
@@ -63,9 +63,9 @@ ht-degree: 98%
 * [Digital Experience 藍圖](#blueprints)
 * [Adobe 產品安全性漏洞](https://helpx.adobe.com/tw/security.html)
 
-## ![圖示](/assets/experience-league.png) [!DNL Experience League]活動與最新訊息 {#events}
+## ![圖示](/assets/experience-league.png)[!DNL Experience League]活動和更新 {#events}
 
-了解 Experience League 上的精彩活動。 若要向 Adobe 產品專家學習、與之互動或獲得解答，這是您絕佳的選擇！
+了解 Experience League 上的精彩活動。 這裡是您向 Adobe 產品專家學習、與之互動或獲得解答的最佳場所！
 
 | 發佈日期 | 應用程式 | 名稱 | 類型 | 說明 |
 | -----------| ---------- | ---------- | ---------- |---------- |
@@ -78,7 +78,7 @@ ht-degree: 98%
 
 +++即將推出的 Experience League 活動
 
-請查看 [Experience League 活動](https://experienceleague.adobe.com/events/?lang=zh-Hant)取得即將到來的活動和隨選即播的過去活動的完整時間表。
+請查看 [Experience League 活動](https://experienceleague.adobe.com/events/)取得即將到來的活動和隨選即播的過去活動的完整時間表。
 
 +++
 
@@ -104,7 +104,7 @@ ht-degree: 98%
 
 +++詳細資訊
 
-[!DNL Adobe System Status] 會提供有關 Adobe 產品的詳細資訊、狀態更新和電子郵件通知。獲得有關服務中斷、作業中斷和維護事件的通知。請造訪 [status.adobe.com](https://status.adobe.com/) 來查看。
+[!DNL Adobe System Status] 提供有關 Adobe 產品的詳細資訊、狀態更新和電子郵件通知。收到有關服務中斷、作業中斷和維護事件的通知。請前往 [status.adobe.com](https://status.adobe.com/) 了解詳情。
 
 **新功能**
 
@@ -128,7 +128,7 @@ ht-degree: 98%
 
 ## ![圖示](/assets/ec_appicon_24.png) [!DNL Experience Cloud] - 統一介面與管理 {#ecloud}
 
-了解關於 [!DNL Experience Cloud] 統一介面元件和管理。管理產品和使用者、配置輪廓的設定和偏好設定、搜尋 Experience Cloud 物件以及管理 Cookie。
+了解關於 [!DNL Experience Cloud] 統一介面元件和管理。管理產品和使用者、配置設定檔的設定和偏好設定、搜尋 Experience Cloud 物件以及管理 Cookie。
 
 +++詳細資訊
 
@@ -138,7 +138,7 @@ ht-degree: 98%
 
 ## ![圖示](/assets/experience_platform_appicon_24.png) [!DNL Experience Platform] {#platform}
 
-尋找 [!DNL Experience Platform] 和 [!UICONTROL Mobile SDK] 的最新發行資訊和新文件。查看 Experience League 上的新教學課程和知識庫。
+尋找 [!DNL Experience Platform] 和 [!UICONTROL Mobile SDK] 的最新發行資訊和新文件。檢視 Experience League 上的新教學課程和知識庫。
 
 +++詳細資訊
 
@@ -152,9 +152,9 @@ ht-degree: 98%
 
 | 發佈日期 | 應用程式 | 名稱 | 類型 | 說明 |
 | ----------| ---------- | ---------- | ---------- |---------- |
-| 2023 年 9 月 | 目的地 | [目的地概觀](https://experienceleague.adobe.com/docs/platform-learn/tutorials/destinations/understanding-destinations.html?lang=zh-Hant) | 影片 | 了解關於可用來從 Real-Time CDP、Experience Platform 和標籤獲取資料以支援各種使用案例的目標類型。 |
-| 2023 年 9 月 | 目的地 | [在 Experience Platform 中設定資料集匯出目的地](https://experienceleague.adobe.com/docs/platform-learn/tutorials/destinations/configure-dataset-export-destination.html?lang=zh-Hant) | 影片 | 了解關於使用目標連線將資料集從 Adob&#x200B;&#x200B;e Experience Platform 匯出到雲端儲存空間位置的設定、工作流程和使用案例。 |
-| 2023 年 9 月 | 資料收集 | [在資料收集中使用快速啟動工作流程](https://experienceleague.adobe.com/docs/platform-learn/data-collection/event-forwarding/quick-start-workflows.html?lang=zh-Hant) | 影片 | 了解關於進階使用案例以充分利用 [!DNL Facebook]（[!DNL Meta]) [!UICONTROL 資料收集]中的快速啟動工作流程 |
+| 2023 年 9 月 | 目的地 | [目的地概觀](https://experienceleague.adobe.com/docs/platform-learn/tutorials/destinations/understanding-destinations.html) | 影片 | 了解關於可用來從 Real-Time CDP、Experience Platform 和標籤獲取資料以支援各種使用案例的目標類型。 |
+| 2023 年 9 月 | 目的地 | [在 Experience Platform 中設定資料集匯出目的地](https://experienceleague.adobe.com/docs/platform-learn/tutorials/destinations/configure-dataset-export-destination.html) | 影片 | 了解關於使用目標連線將資料集從 Adob&#x200B;&#x200B;e Experience Platform 匯出到雲端儲存空間位置的設定、工作流程和使用案例。 |
+| 2023 年 9 月 | 資料收集 | [在資料收集中使用快速啟動工作流程](https://experienceleague.adobe.com/docs/platform-learn/data-collection/event-forwarding/quick-start-workflows.html) | 影片 | 了解關於進階使用案例以充分利用 [!DNL Facebook]（[!DNL Meta]) [!UICONTROL 資料收集]中的快速啟動工作流程 |
 | 2023 年 9 月 | Privacy Service | [Privacy Service 簡介](https://experienceleague.adobe.com/docs/platform-learn/tutorials/privacy/introduction-to-privacy-services.html?lang=zh-Hant) | 多部影片 | 了解隱私權法規及其對資料操作的影響。同時也了解 [!UICONTROL Privacy Service] 如何因應這些挑戰。檢視 [!DNL Experience Platform] 教學課程中「隱私權與安全性」部分的最新影片。 |
 | 2023 年 9 月 | 管理 | [設定以屬性為基礎的存取控制](https://experienceleague.adobe.com/docs/platform-learn/tutorials/admin/configure-attribute-based-access-control.html?lang=zh-Hant) | 影片 | 了解如何配置以屬性為基礎的存取控制，以限制對特定 [!DNL Experience Platform] 資源的存取。 |
 
@@ -166,8 +166,8 @@ ht-degree: 98%
 
 | 發佈日期 | 名稱 | 類型 | 說明 |
 |---------|--------|---------|---------|
-| 2023 年 9 月 | [AEP - Compose Audience 供唯讀 - 我們需要什麼權限？](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-22841.html?lang=zh-Hant) | 新文章 | 了解關於存取[!UICONTROL 客群]區段以組成新客群時必須選取哪些權限。 |
-| 2023 年 9 月 | [[!UICONTROL 目標追蹤]未出現在 Adob&#x200B;&#x200B;e Experience Platform Debugger 中](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-22635.html?lang=zh-Hant) | 新文章 | 了解[!UICONTROL 目標追蹤]標籤未出現在 Adob&#x200B;&#x200B;e Experience Platform Debugger 中的問題解決方法。 |
+| 2023 年 9 月 | [AEP - Compose Audience 供唯讀 - 我們需要什麼權限？](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-22841.html) | 新文章 | 了解關於存取[!UICONTROL 客群]區段以組成新客群時必須選取哪些權限。 |
+| 2023 年 9 月 | [[!UICONTROL 目標追蹤]未出現在 Adob&#x200B;&#x200B;e Experience Platform Debugger 中](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-22635.html) | 新文章 | 了解[!UICONTROL 目標追蹤]標籤未出現在 Adob&#x200B;&#x200B;e Experience Platform Debugger 中的問題解決方法。 |
 
 {style="table-layout:auto"}
 
@@ -226,8 +226,8 @@ ht-degree: 98%
 
 | 發佈日期 | 名稱 | 類型 | 說明 |
 |---------|--------|---------|---------|
-| 2023 年 9 月 | [無法透過 Flutter AEP Core Libraries 發送 Adob&#x200B;&#x200B;e Analytics 資料](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-22809.html?lang=zh-Hant) | 新文章 | 了解使用 trackAction/trackState API 透過 Flutter AEP Core Libraries (Mobile SDK) 在 Adob&#x200B;&#x200B;e Analytics 中發送資料時出現問題的解決方法。 |
-| 2023 年 9 月 | 請參閱[無法看到伺服器呼叫使用量](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-22784.html?lang=zh-Hant)。 | 新文章 | 了解您未看到[!UICONTROL 伺服器呼叫使用量]儀表板問題的解決方法。 |
+| 2023 年 9 月 | [無法透過 Flutter AEP Core Libraries 發送 Adob&#x200B;&#x200B;e Analytics 資料](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-22809.html) | 新文章 | 了解使用 trackAction/trackState API 透過 Flutter AEP Core Libraries (Mobile SDK) 在 Adob&#x200B;&#x200B;e Analytics 中發送資料時出現問題的解決方法。 |
+| 2023 年 9 月 | 請參閱[無法看到伺服器呼叫使用量](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-22784.html)。 | 新文章 | 了解您未看到[!UICONTROL 伺服器呼叫使用量]儀表板問題的解決方法。 |
 
 {style="table-layout:auto"}
 
@@ -251,7 +251,7 @@ ht-degree: 98%
 
 | 發佈日期 | 名稱 | 類型 | 說明 |
 | -----------| ---------- | ---------- | ---------- |
-| 2023 年 9 月 | [使用物件陣列 (在  [!DNL Customer Journey Analytics]](https://experienceleague.adobe.com/docs/customer-journey-analytics-learn/tutorials/use-cases/complex-data/object-arrays-in-cja.html?lang=zh-Hant) 中) | 影片 | 了解如何利用 CJA 中的輪廓和尋找資料集的物件陣列來豐富您的 B2B 和 B2C 分析 (從連接到資料檢視和 Workspace) |
+| 2023 年 9 月 | [使用物件陣列 (在  [!DNL Customer Journey Analytics]](https://experienceleague.adobe.com/docs/customer-journey-analytics-learn/tutorials/use-cases/complex-data/object-arrays-in-cja.html) 中) | 影片 | 了解如何利用 CJA 中的輪廓和尋找資料集的物件陣列來豐富您的 B2B 和 B2C 分析 (從連接到資料檢視和 Workspace) |
 | 2023 年 9 月 | [使用資料字典](https://experienceleague.adobe.com/docs/customer-journey-analytics-learn/tutorials/components/data-dictionary/use-data-dictionary.html?lang=zh-Hant) | 影片 | 了解適用於 [!DNL Customer Journey Analytics] 的[!UICONTROL Analysis Workspace] 中的[!UICONTROL 資料字典]。 |
 | 2023 年 9 月 | [[!UICONTROL Analysis Workspace] 概觀](https://experienceleague.adobe.com/docs/customer-journey-analytics-learn/tutorials/analysis-workspace/workspace-projects/analysis-workspace-overview.html?lang=zh-Hant) | 影片 | 了解關於在 [!UICONTROL Analysis Workspace] 中用來建立專案和儀表板的基本元件；Analysis Workspace 是靈活、自由格式的分析環境，用來探索和視覺化 Experience Platform 中的資料。 |
 | 2023 年 9 月 | [[!UICONTROL 在 Analysis Workspace 中建立新專案]](https://experienceleague.adobe.com/docs/customer-journey-analytics-learn/tutorials/analysis-workspace/workspace-projects/build-a-new-project.html?lang=zh-Hant) | 影片 | 了解如何在 [!UICONTROL Analysis Workspace] 為 [!DNL Customer Journey Analytics] 建立基本專案。 |
@@ -292,17 +292,17 @@ New articles and updates to existing articles for [!DNL Audience Manager].
 
 | Published | Name | Type | Description |
 | -----------| ---------- | ---------- | ---------- |
-| August 2023 | [linktext](https://experienceleague.adobe.com/zh-hant?lang=en#home) |Video | Description |
-| August 2023 | [linktext](https://experienceleague.adobe.com/zh-hant?lang=en#home) |Video | Description |
-| August 2023 | [linktext](https://experienceleague.adobe.com/zh-hant?lang=en#home) |Video | Description |
-| August 2023 | [linktext](https://experienceleague.adobe.com/zh-hant?lang=en#home) |Video | Description |
-| August 2023 | [linktext](https://experienceleague.adobe.com/zh-hant?lang=en#home) |Video | Description |
-| August 2023 | [linktext](https://experienceleague.adobe.com/zh-hant?lang=en#home) |Video | Description |
-| August 2023 | [linktext](https://experienceleague.adobe.com/zh-hant?lang=en#home) |Video | Description |
+| August 2023 | [linktext](https://experienceleague.adobe.com/?lang=en#home) |Video | Description |
+| August 2023 | [linktext](https://experienceleague.adobe.com/?lang=en#home) |Video | Description |
+| August 2023 | [linktext](https://experienceleague.adobe.com/?lang=en#home) |Video | Description |
+| August 2023 | [linktext](https://experienceleague.adobe.com/?lang=en#home) |Video | Description |
+| August 2023 | [linktext](https://experienceleague.adobe.com/?lang=en#home) |Video | Description |
+| August 2023 | [linktext](https://experienceleague.adobe.com/?lang=en#home) |Video | Description |
+| August 2023 | [linktext](https://experienceleague.adobe.com/?lang=en#home) |Video | Description |
 
 {style="table-layout:auto"}
 
-For self-help resources, see [Audience Manager documentation and tutorials](https://experienceleague.adobe.com/docs/audience-manager.html?lang=zh-Hant) on Experience League.
+For self-help resources, see [Audience Manager documentation and tutorials](https://experienceleague.adobe.com/docs/audience-manager.html) on Experience League.
 
  -->
 
@@ -362,7 +362,7 @@ _新功能_
 * **[Google reCAPTCHA 企業支援](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/forms/adaptive-forms-authoring/authoring-adaptive-forms-foundation-components/add-components-to-an-adaptive-form/captcha-adaptive-forms.html?lang=zh-Hant)** – 以調適型表單使用 Google reCAPTCHA 企業版，為防止詐欺活動和垃圾郵件提供增強的保護，進而提供更安全的用戶體驗。透過進階的風險分析和緊密整合，真實的使用者可輕鬆地提交表單，同時有效地封鎖機器人。
 * **[Adobe Analytics 與適用於表單的 Experience Cloud Setup Automation](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/forms/integrate/services/enable-adobe-analytics-adaptive-form-using-experience-cloud-setup-automation.html?lang=zh-Hant)** – 現在起，輕按幾個按鈕即可啟用 Adobe Analytics 和 Experience Cloud Setup Automation。這能讓您將 AEM Forms as a Cloud Service 與 Experience Platform 標籤和 Adobe Analytics 連接，以擷取和追蹤已發佈表單的效能指標。
 * **[適用於調適型表單的 Adobe Analytics 報告範本](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/forms/integrate/services/view-understand-aem-forms-analytics-reports.html?lang=zh-Hant)** – Forms as a Cloud Service 現在提供 Adobe Analytics 報告 OOTB。這有助於輕鬆了解表單的效能。表單層級的量度可讓您深入了解表單在多個關鍵效能指標 (KPI) 上的表現，例如呈現、訪客、提交、平均填寫時間。透過追蹤使用者行為和意見回饋，您可以識別表單中造成混亂的部分，並引導表單在設計和功能方面的改善。
-* **[以核心元件為主的調適型表單中的表單片段](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/forms/adaptive-forms-authoring/authoring-adaptive-forms-core-components/create-an-adaptive-form-on-forms-cs/adaptive-form-fragments-core-components.html?lang=zh-Hant)** – 告別重複的資料、最佳化您的數位庫存，並可改善協作，同時還可使用表單片段提升表單建構體驗。這些可重複使用的元件會無縫整合到多個表單中，讓您更輕鬆建立一致且具有專業外觀的表單。表單片段透過「一次變更並隨處反映」功能，確保可重複使用、標準化和品牌一致性。 在一處進行的更新會自動傳播到使用這些片段的所有表單，因此可體驗更高的可維護性和效率。
+* **[以核心元件為主的調適型表單中的表單片段](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/forms/adaptive-forms-authoring/authoring-adaptive-forms-core-components/create-an-adaptive-form-on-forms-cs/adaptive-form-fragments-core-components.html?lang=zh-Hant)** – 告別重複的資料、最佳化您的數位庫存，並可改善協作，同時還可使用表單片段提升表單建構體驗。這些可重複使用的元件會無縫整合到多個表單中，讓您更輕鬆建立一致且具有專業外觀的表單。表單片段透過「一次變更，處處反映」功能確保可重複性、標準化和品牌一致性。在一處進行的更新會自動傳播到使用這些片段的所有表單，因此可體驗更高的可維護性和效率。
 * **[更佳的 Adobe Sign 工作流程步驟](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/forms/create-form-centric-workflows/aem-forms-workflow-step-reference.html?lang=zh-Hant#sign-document-step-sign-document-step)** – Adobe Sign 工作流程步驟經過改善，其中包括：
 
    * **Adobe Sign 以政府核發 ID 為主的驗證** – Adobe Acrobat Sign 以政府核發 ID 為主的驗證允許使用者使用政府核發的 ID (駕&#x200B;&#x200B;駛執照、國民身份證、護照) 驗證其身份，進而提&#x200B;&#x200B;供更多的驗證防護層。此增強功能利用受信任的身分識別文件為簽名過程額外增加一層可信度，使其成為需要增強安全性、合規性和使用者驗證等情境的理想選擇。
@@ -371,7 +371,7 @@ _新功能_
 
 * **通訊 API 中的頁數支援** – 現在，除了透過通訊 API 擷取文件之外，您也可以接收有關文件內所含頁數的重要資訊。
 * **[在規則編輯器中使用自訂錯誤處理常式進行錯誤處理](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/forms/adaptive-forms-authoring/authoring-adaptive-forms-core-components/create-an-adaptive-form-on-forms-cs/add-custom-error-handler-adaptive-forms-core-components.html?lang=zh-Hant)** – 您現在可以叫用自訂函數來回應外部服務傳回的錯誤，並為一般使用者提供量身打造的回應。例如，您可以針對特定錯誤程式碼在後端叫用自訂工作流程，或通知客戶服務已關閉。
-* **[AEM Forms Designer 64 位元版本](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/forms/using-communications/installing-configuring-designer.html?lang=zh-Hant)** – AEM Forms Designer 64 位元版本在效能、可擴充性和記憶體管理方面更為提升，以增強您的表單建立體驗。有了64位元架構，您可以輕鬆處理更大型且更複雜的專案，確保順暢的設計工作流程及最佳化效率。 透過此尖端的發行版本，提升您的外型設計功能，並擁抱AEM Forms Designer的未來。
+* **[AEM Forms Designer 64 位元版本](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/forms/using-communications/installing-configuring-designer.html?lang=zh-Hant)** – AEM Forms Designer 64 位元版本在效能、可擴充性和記憶體管理方面更為提升，以增強您的表單建立體驗。透過 64 位元架構，您可以輕鬆處理更大、更複雜的專案，確保設計工作流程順利且達成最佳效率。透過這個最先進的版本，提升您的表單設計能力並迎接 AEM Forms Designer 的未來。
 
 _早期採用者計劃_
 
@@ -381,8 +381,8 @@ _早期採用者計劃_
 
 * **[Headless 調適型表單](https://experienceleague.adobe.com/docs/experience-manager-headless-adaptive-forms/using/overview.html?lang=zh-Hant)** – 使用 Headless 調適型表單讓您的開發人員能夠建立、發佈和管理可透過 API 存取和互動的互動式表單，而不是透過傳統的圖形使用者介面。Headless 調適型表單可協助您：
 
-   * 以您選擇的程式語言建置高品質的多管道表單
-   * 以原生方式將表單整合至您的案頭和行動應用程式、網站和聊天應用程式
+   * 使用您選擇的程式語言建置高品質的多管道表單
+   * 以原生方式將表單整合至您的桌面和行動應用程式、網站以及聊天應用程式
    * 在表單應用程式中重複使用您的專屬使用者介面元件
    * 使用 AEM Forms 的強大功能
 
@@ -396,9 +396,9 @@ _早期採用者計劃_
    * 要求的標頭和屬性 (例如 IP 位址)
    * 與惡意流量相關聯的已知流量模式
 
-  有興趣嘗試該功能並分享回饋意見嗎？若要深入了解早期採用者計劃，請從您的官方電子郵件 ID 寄送電子郵件到 [aemcs-waf-adopter@adobe.com](mailto:aemcs-waf-adopter@adobe.com)。空間有限。
+  有興趣嘗試該功能並分享回饋意見嗎？若要深入了解早期採用者計劃，請從您的官方電子郵件 ID 寄送電子郵件到 [aemcs-waf-adopter@adobe.com](mailto:aemcs-waf-adopter@adobe.com)。名額有限。
 
-  在文章[此處](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/security/cdn-and-waf-rules.html?lang=zh-Hant)中進一步瞭解此功能。
+  若要深入了解此功能，請點選[這裡](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/security/cdn-and-waf-rules.html?lang=zh-Hant)參閱文章。
 
 ### [!DNL Cloud Manager]
 
@@ -504,12 +504,12 @@ _已知問題_
 
 | 發佈日期 | 應用程式 | 名稱 | 類型 | 說明 |
 | ----------| ---------- | ---------- | ---------- |---------- |
-| 2023 年 10 月 | 應用程式 | [AEM Assets Sidekick 外掛程式和 Edge Delivery Services](https://experienceleague.adobe.com/docs/experience-manager-learn/assets/edge-delivery-services/sidekick-plugin.html?lang=zh-Hant) | 影片 | 了解如何利用 AEM Assets Sidekick 外掛程式將託管資產加入透過 Edge Delivery Services 提供的高度影響力體驗。 |
-| 2023 年 9 月 | [!DNL AEM as a Cloud Service] | [[!DNL AEM as a Cloud Service] caching](https://experienceleague.adobe.com/docs/experience-manager-learn/cloud-service/caching/overview.html?lang=zh-Hant) | 影片 | 了解關於在 AEM as a Cloud Service 中進行快取。 |
-| 2023 年 9 月 | [!DNL AEM as a Cloud Service] | [內容片段編輯器](https://experienceleague.adobe.com/docs/experience-manager-learn/content-fragments-console/basics/content-fragment-editor.html?lang=zh-Hant) | 影片 | 簡要介紹[!DNL Experience Manager][!UICONTROL 內容片段]編輯器。 |
+| 2023 年 10 月 | 應用程式 | [AEM Assets Sidekick 外掛程式和 Edge Delivery Services](https://experienceleague.adobe.com/docs/experience-manager-learn/assets/edge-delivery-services/sidekick-plugin.html) | 影片 | 了解如何利用 AEM Assets Sidekick 外掛程式將託管資產加入透過 Edge Delivery Services 提供的高度影響力體驗。 |
+| 2023 年 9 月 | [!DNL AEM as a Cloud Service] | [[!DNL AEM as a Cloud Service] caching](https://experienceleague.adobe.com/docs/experience-manager-learn/cloud-service/caching/overview.html) | 影片 | 了解關於在 AEM as a Cloud Service 中進行快取。 |
+| 2023 年 9 月 | [!DNL AEM as a Cloud Service] | [內容片段編輯器](https://experienceleague.adobe.com/docs/experience-manager-learn/content-fragments-console/basics/content-fragment-editor.html) | 影片 | 簡要介紹[!DNL Experience Manager][!UICONTROL 內容片段]編輯器。 |
 | 2023 年 9 月 | [!DNL AEM as a Cloud Service] | [架構  [!DNL AEM as a Cloud Service]](https://experienceleague.adobe.com/docs/experience-manager-learn/cloud-service/introduction/architecture.html?lang=zh-Hant) | 影片 | 探索 AEM as a Cloud Service 及 Edge Delivery Services 的基本架構和重要部分。 |
-| 2023 年 9 月 | [!DNL Forms] | [從文件清單中擷取文件](https://experienceleague.adobe.com/docs/experience-manager-learn/forms/custom-workflow-steps/extract-document-from-list.html?lang=zh-Hant) | 文章 | 了解關於自訂工作流程元件以便從文件清單中擷取特定文件。 |
-| 2023 年 9 月 | [!DNL Forms] | [自訂感謝頁面](https://experienceleague.adobe.com/docs/experience-manager-learn/forms/handling-af-form-submissions/thank-you-page-on-fdm-submission.html?lang=zh-Hant) | 文章 | 在感謝頁面中顯示表單資料模型提交的回應。 |
+| 2023 年 9 月 | [!DNL Forms] | [從文件清單中擷取文件](https://experienceleague.adobe.com/docs/experience-manager-learn/forms/custom-workflow-steps/extract-document-from-list.html) | 文章 | 了解關於自訂工作流程元件以便從文件清單中擷取特定文件。 |
+| 2023 年 9 月 | [!DNL Forms] | [自訂感謝頁面](https://experienceleague.adobe.com/docs/experience-manager-learn/forms/handling-af-form-submissions/thank-you-page-on-fdm-submission.html) | 文章 | 在感謝頁面中顯示表單資料模型提交的回應。 |
 
 {style="table-layout:auto"}
 
@@ -519,12 +519,12 @@ _已知問題_
 
 | 發佈日期 | 名稱 | 類型 | 說明 |
 |---------|--------|---------|---------|
-| 2023 年 9 月 | [手動翻譯作業卡在「進行中」狀態](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-22846.html?lang=zh-Hant) | 新文章 | 了解當匯入翻譯內容後翻譯作業卡在「*進行中*」的解決方法。 |
-| 2023 年 9 月 | [AEM as a Cloud Service 中的權限意外消失](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-22839.html?lang=zh-Hant) | 新文章 | 了解 AEM as a Cloud Service 中權限意外消失問題的解決方法。 |
-| 2023 年 9 月 | [如何刪除發佈/預覽上的剩餘節點](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-22828.html?lang=zh-Hant) | 新文章 | 了解如何刪除[發佈/預覽]在[!DNL AEM as a Cloud Service]上的剩餘節點。 |
-| 2023 年 9 月 | [手動切換作者後 SSL 憑證會還原](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-22814.html?lang=zh-Hant) | 新文章 | 了解如何修復手動切換作者後還原的 SSL 憑證。 |
-| 2023 年 9 月 | [無法在 Author 中載入 DAM 資產控制台](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-22786.html?lang=zh-Hant) | 新文章 | 了解嘗試使用 `/assets.html/content/dam` 存取資產 AEM 控制台時出現螢幕一片空白問題的解決方法。 |
-| 2023 年 9 月 | 自訂標籤的&#x200B;[*智慧型培訓*&#x200B;失敗](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-22781.html?lang=zh-Hant) | 新文章 | 了解自訂標籤&#x200B;*智慧型培訓*&#x200B;失敗問題的解決方法。 |
+| 2023 年 9 月 | [手動翻譯作業卡在「進行中」狀態](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-22846.html) | 新文章 | 了解當匯入翻譯內容後翻譯作業卡在「*進行中*」的解決方法。 |
+| 2023 年 9 月 | [AEM as a Cloud Service 中的權限意外消失](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-22839.html) | 新文章 | 了解 AEM as a Cloud Service 中權限意外消失問題的解決方法。 |
+| 2023 年 9 月 | [如何刪除發佈/預覽上的剩餘節點](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-22828.html) | 新文章 | 了解如何刪除[發佈/預覽]在[!DNL AEM as a Cloud Service]上的剩餘節點。 |
+| 2023 年 9 月 | [手動切換作者後 SSL 憑證會還原](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-22814.html) | 新文章 | 了解如何修復手動切換作者後還原的 SSL 憑證。 |
+| 2023 年 9 月 | [無法在 Author 中載入 DAM 資產控制台](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-22786.html) | 新文章 | 了解嘗試使用 `/assets.html/content/dam` 存取資產 AEM 控制台時出現螢幕一片空白問題的解決方法。 |
+| 2023 年 9 月 | 自訂標籤的&#x200B;[*智慧型培訓*&#x200B;失敗](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-22781.html) | 新文章 | 了解自訂標籤&#x200B;*智慧型培訓*&#x200B;失敗問題的解決方法。 |
 
 {style="table-layout:auto"}
 
@@ -548,8 +548,8 @@ Learn more about [[!DNL Experience Manager Guides]](https://business.adobe.com/p
 
 ### Additional resources
 
-* [[!DNL Experience Manager Guides]](https://experienceleague.adobe.com/docs/experience-manager-guides-learn/videos/overview.html?lang=zh-Hant) - tutorials on Experience League
-* [[!DNL Experience Manager Guides] Learn & Support](https://helpx.adobe.com/tw/support/xml-documentation-for-experience-manager.html) - product documentation -->
+* [[!DNL Experience Manager Guides]](https://experienceleague.adobe.com/docs/experience-manager-guides-learn/videos/overview.html) - tutorials on Experience League
+* [[!DNL Experience Manager Guides] Learn & Support](https://helpx.adobe.com/support/xml-documentation-for-experience-manager.html) - product documentation -->
 
 ## ![圖示](/assets/ec_appicon_24.png) [!DNL Adobe Commerce] {#commerce}
 
@@ -570,9 +570,9 @@ Learn more about [[!DNL Experience Manager Guides]](https://business.adobe.com/p
 
 | 發佈日期 | 名稱 | 類型 | 說明 |
 | -----------| ---------- | ---------- | ---------- |
-| 2023 年 9 月 | [管理公司信用](https://experienceleague.adobe.com/docs/commerce-learn/tutorials/b2b/company-credit.html?lang=zh-Hant) | 影片 | 了解 B2B 公司帳戶使用者如何使用帳戶購買，並達到獲得的額度上限為止。 |
+| 2023 年 9 月 | [管理公司信用](https://experienceleague.adobe.com/docs/commerce-learn/tutorials/b2b/company-credit.html) | 影片 | 了解 B2B 公司帳戶使用者如何使用帳戶購買，並達到獲得的額度上限為止。 |
 | 2023 年 9 月 | [內容分期](https://experienceleague.adobe.com/docs/commerce-learn/tutorials/content/content-staging.html?lang=zh-Hant) | 影片 | 了解如何建立、預覽和安排管理員直接為您商店進行的各種內容更新。 |
-| 2023 年 9 月 | [管理公司帳戶](https://experienceleague.adobe.com/docs/commerce-learn/tutorials/b2b/company-accounts.html?lang=zh-Hant) | 影片 | 了解如何管理您的 B2B 公司帳戶，包括任何供核准的待處理請求。 |
+| 2023 年 9 月 | [管理公司帳戶](https://experienceleague.adobe.com/docs/commerce-learn/tutorials/b2b/company-accounts.html) | 影片 | 了解如何管理您的 B2B 公司帳戶，包括任何供核准的待處理請求。 |
 | 2023 年 9 月 | [B2B 銷售報價條列項目折扣](https://experienceleague.adobe.com/docs/commerce-learn/tutorials/b2b/b2b-quote/quote-line-item-notes.html?lang=zh-Hant) | 影片 | 了解如何使用 Adobe Commerce B2B 報價的條列項目備註。 |
 | 2023 年 9 月 | [「即時搜尋」推薦內容](https://experienceleague.adobe.com/docs/commerce-learn/tutorials/marketing/live-search-recommendations.html?lang=zh-Hant) | 影片 | 了解如何將產品推薦的「即時搜尋」新增到您的商店，並提供極為引人入勝、相關且個人化的購物體驗。 |
 | 2023 年 9 月 | [適用於 Adobe Commerce 的擴增實境檢視器](https://experienceleague.adobe.com/docs/commerce-learn/tutorials/catalog/augmented-reality.html?lang=zh-Hant) | 影片 | 了解 Commerce Marketplace 上提供的擴增實境檢視模組。 |
@@ -588,9 +588,9 @@ Adobe Commerce 的新文章和現有文章的更新。
 | 發佈日期 | 名稱 | 類型 | 說明 |
 |---------|--------|---------|---------|
 | 2023 年 9 月 | [品質修補工具 (QPT)](https://experienceleague.adobe.com/docs/commerce-knowledge-base/kb/support-tools/patches/patches-available-in-qpt-tool-overview.html?lang=zh-Hant) | 新文章 | 關於如何套用 QPT 1.1.36 和 QPT 1.1.37 中可用的修補程式的新文章已發佈，並且可以在其各自區段中找到。 |
-| 2023 年 9 月 | [UPS 運送方法整合從 SOAP 移轉至 RESTful API](https://experienceleague.adobe.com/docs/commerce-knowledge-base/kb/troubleshooting/known-issues-patches-attached/ups-shipping-method-integration-migration-from-soap-to-restful-api.html?lang=zh-Hant) | 新文章 | 本文提供補丁程式以解決 Adob&#x200B;&#x200B;e Commerce 2.4.4 - 2.4.6-pX 的 United Parcel Service (UPS) 運送方法整合從 SOAP 移轉至 RESTful API 的問題。 |
-| 2023 年 9 月 | [為現有 Cloud Starter 專案設定 Adob&#x200B;&#x200B;e Commerce Intelligence 連線](https://experienceleague.adobe.com/docs/commerce-knowledge-base/kb/troubleshooting/miscellaneous/configure-mbi-connection-for-cloud-starter-projects.html?lang=zh-Hant) | 新文章 | 了解當您想要為現有 Cloud Starter 專案設定 Adob&#x200B;&#x200B;e Commerce Intelligence 連線時的解決方法。 |
-| 2023 年 9 月 | [第三方安全掃描發現的漏洞應提交給 HackerOne](https://experienceleague.adobe.com/docs/commerce-knowledge-base/kb/troubleshooting/miscellaneous/third-party-test-reports-are-handled-by-hackerone.html?lang=zh-Hant) | 新文章 | 了解解決第三方安全掃描發現漏洞的解決方法。 |
+| 2023 年 9 月 | [UPS 運送方法整合從 SOAP 移轉至 RESTful API](https://experienceleague.adobe.com/docs/commerce-knowledge-base/kb/troubleshooting/known-issues-patches-attached/ups-shipping-method-integration-migration-from-soap-to-restful-api.html) | 新文章 | 本文提供補丁程式以解決 Adob&#x200B;&#x200B;e Commerce 2.4.4 - 2.4.6-pX 的 United Parcel Service (UPS) 運送方法整合從 SOAP 移轉至 RESTful API 的問題。 |
+| 2023 年 9 月 | [為現有 Cloud Starter 專案設定 Adob&#x200B;&#x200B;e Commerce Intelligence 連線](https://experienceleague.adobe.com/docs/commerce-knowledge-base/kb/troubleshooting/miscellaneous/configure-mbi-connection-for-cloud-starter-projects.html) | 新文章 | 了解當您想要為現有 Cloud Starter 專案設定 Adob&#x200B;&#x200B;e Commerce Intelligence 連線時的解決方法。 |
+| 2023 年 9 月 | [第三方安全掃描發現的漏洞應提交給 HackerOne](https://experienceleague.adobe.com/docs/commerce-knowledge-base/kb/troubleshooting/miscellaneous/third-party-test-reports-are-handled-by-hackerone.html) | 新文章 | 了解解決第三方安全掃描發現漏洞的解決方法。 |
 | 2023 年 9 月 | [管理員登入無法運作 - 超出允許的最大工作階段](https://experienceleague.adobe.com/docs/commerce-knowledge-base/kb/troubleshooting/miscellaneous/admin-login-not-working-allowed-session-max-size-exceed.html?lang=zh-Hant) | 新文章 | 了解嘗試登入管理員面板時，表單卻剛好重新整理而使您無法登入的解決方法。 |
 
 {style="table-layout:auto"}
@@ -637,11 +637,11 @@ Adobe Commerce 的新文章和現有文章的更新。
 
 | 發佈日期 | 名稱 | 類型 | 說明 |
 |---------|----|----|-----------|
-| 2023 年 9 月 | [一天發送的簡訊最大數量](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-22848.html?lang=zh-Hant) | 新文章 | 了解如何查看一天內可發送的簡訊數量上限。 |
-| 2023 年 9 月 | [OOTB 結構描述服務「名稱」欄位中的變動](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-22857.html?lang=zh-Hant) | 新文章 | 了解現成可用 (OOTB) 結構描述中的「*[!UICONTROL 名稱]*」欄位為何變更。 |
-| 2023 年 9 月 | [註冊權杖不儲存在 _nms:appSubscriptionRcp_ 表格中](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-22844.html?lang=zh-Hant) | 新文章 | 了解註冊權杖未儲存在 `nms:appSubscriptionRcp` 表格中的解決方法。 |
-| 2023 年 9 月 | [Campaign Classic 中 WebApps URL 的品牌化](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-22750.html?lang=zh-Hant) | 新文章 | 了解以下問題的解決方法：是否可以修改/個人化 URL 以使用特定公司名稱而不是 Adob&#x200B;&#x200B;e 伺服器，且同時仍由 Adob&#x200B;&#x200B;e 伺服器託管。 |
-| 2023 年 9 月 | [_更新資料_&#x200B;活動引起的不明欄位錯誤](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-22755.html?lang=zh-Hant) | 新文章 | 了解以下問題的解決方法：執行工作流程時由&#x200B;_更新資料_&#x200B;活動引發的錯誤。 |
+| 2023 年 9 月 | [一天發送的簡訊最大數量](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-22848.html) | 新文章 | 了解如何查看一天內可發送的簡訊數量上限。 |
+| 2023 年 9 月 | [OOTB 結構描述服務「名稱」欄位中的變動](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-22857.html) | 新文章 | 了解現成可用 (OOTB) 結構描述中的「*[!UICONTROL 名稱]*」欄位為何變更。 |
+| 2023 年 9 月 | [註冊權杖不儲存在 _nms:appSubscriptionRcp_ 表格中](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-22844.html) | 新文章 | 了解註冊權杖未儲存在 `nms:appSubscriptionRcp` 表格中的解決方法。 |
+| 2023 年 9 月 | [Campaign Classic 中 WebApps URL 的品牌化](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-22750.html) | 新文章 | 了解以下問題的解決方法：是否可以修改/個人化 URL 以使用特定公司名稱而不是 Adob&#x200B;&#x200B;e 伺服器，且同時仍由 Adob&#x200B;&#x200B;e 伺服器託管。 |
+| 2023 年 9 月 | [_更新資料_&#x200B;活動引起的不明欄位錯誤](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-22755.html) | 新文章 | 了解以下問題的解決方法：執行工作流程時由&#x200B;_更新資料_&#x200B;活動引發的錯誤。 |
 
 {style="table-layout:auto"}
 
@@ -656,7 +656,7 @@ Adobe Commerce 的新文章和現有文章的更新。
 
 ## ![圖示](/assets/experience_platform_appicon_24.png) [!DNL Journey Optimizer] {#journey-opt}
 
-了解關於 [!DNL Journey Optimizer] 的最新發行資訊。在 Experience League 上查看最新的教學課程和知識庫支援文章。
+了解關於 [!DNL Journey Optimizer] 的最新發行資訊。在 Experience League 上檢視最新的教學課程和知識庫支援文章。
 
 +++詳細資訊
 
@@ -720,7 +720,7 @@ New articles and updates to existing articles for [!DNL Journey Optimizer].-->
 
 | 發佈日期 | 名稱 | 類型 | 說明 |
 | -----------| ---------- | ---------- | ---------- |
-| 2023 年 9 月 | [Marketo Engage 中的關鍵報告](https://experienceleague.adobe.com/docs/marketo-learn/tutorials/reporting/key-reports.html?lang=zh-Hant) | 影片 | 了解關於 [!DNL Marketo Engage] 中的關鍵報告以及如何提取這些報告。 |
+| 2023 年 9 月 | [Marketo Engage 中的關鍵報告](https://experienceleague.adobe.com/docs/marketo-learn/tutorials/reporting/key-reports.html) | 影片 | 了解關於 [!DNL Marketo Engage] 中的關鍵報告以及如何提取這些報告。 |
 
 ### Marketo Engage 核心更新
 
@@ -763,12 +763,12 @@ New articles and updates to existing articles for [!DNL Journey Optimizer].-->
 
 | 發佈日期 | 名稱 | 類型 | 說明 |
 | -----------| ---------- | ---------- | ---------- |
-| 2023 年 9 月 | [載入任務或專案清單時出現「糟糕」錯誤](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-22882.html?lang=zh-Hant) | 新文章 | 了解如何解決出現&#x200B;*「糟糕」訊息的問題。載入任務或專案清單時發生了點問題*。 |
-| 2023 年 9 月 | [請求佇列變為未發佈狀態](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-22753.html?lang=zh-Hant) | 新文章 | 了解 Adob&#x200B;&#x200B;e Workfront 中請求佇列變為未發佈問題的解決方法。 |
+| 2023 年 9 月 | [載入任務或專案清單時出現「糟糕」錯誤](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-22882.html) | 新文章 | 了解如何解決出現&#x200B;*「糟糕」訊息的問題。載入任務或專案清單時發生了點問題*。 |
+| 2023 年 9 月 | [請求佇列變為未發佈狀態](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-22753.html) | 新文章 | 了解 Adob&#x200B;&#x200B;e Workfront 中請求佇列變為未發佈問題的解決方法。 |
 
 {style="table-layout:auto"}
 
-請參閱[[!DNL Workfront] 產品版本](https://experienceleague.adobe.com/docs/workfront/using/product-announcements/product-releases/product-releases.html?lang=zh-Hant)頁面，以取得所有產品的最新資訊匯總。
+請參閱[[!DNL Workfront] 產品版本](https://experienceleague.adobe.com/docs/workfront/using/product-announcements/product-releases/product-releases.html)頁面，以取得所有產品的最新資訊匯總。
 
 +++
 
@@ -820,7 +820,7 @@ Last updated: **August 9, 2022**
 
 >[!NOTE]
 >
->_[!DNL Adobe Primetime]_&#x200B;現在稱為&#x200B;_[!DNL Adobe Pass]_。在品牌重塑工作完成之前，您近期可能會在文件中看到這兩個品牌名稱。
+>_[!DNL Adobe Primetime]_現在稱為_[!DNL Adobe Pass]_。在品牌重塑工作完成之前，您近期可能會在文件中看到這兩個品牌名稱。
 
 請參閱 [Adobe Pass 發行說明](https://experienceleague.adobe.com/docs/primetime/release-notes/home.html?lang=zh-Hant)以找到特定版本的資訊、系統需求、限制、已修正的問題和已知問題。
 
@@ -856,8 +856,8 @@ Last updated: **August 9, 2022**
 | -----------| ---------- | ---------- | ---------- |
 | 2023 年 9 月 | [Jumpstart 創意構思](https://experienceleague.adobe.com/docs/creative-cloud-enterprise-learn/cce-learning-hub/expressoverview/expressusecase/jumpstart-ideation.html?lang=zh-Hant) | 影片 | 了解如何在為行銷活動展創意內容方面取得先機。 |
 | 2023 年 9 月 | [Adobe Express 使用案例教學課程](https://experienceleague.adobe.com/docs/creative-cloud-enterprise-learn/cce-learning-hub/expressoverview/expressusecase/overview-express-use-case-tutorials.html?lang=zh-Hant) | 影片 | 了解組織內不同團隊如何從 Adob&#x200B;&#x200B;e Express 中受益。 |
-| 2023 年 9 月 | [創造引人注目的行銷內容](https://experienceleague.adobe.com/docs/creative-cloud-enterprise-learn/cce-learning-hub/expressoverview/expressusecase/compelling-merchandise.html?lang=zh-Hant) | 影片 | 了解商務團隊如何輕鬆為其線上商店中的一組新庫存建立引人注目的圖像。 |
-| 2023 年 9 月 | [讓行銷團隊有能力創造多通路內容](https://experienceleague.adobe.com/docs/creative-cloud-enterprise-learn/cce-learning-hub/expressoverview/expressusecase/multi-channel-marketing-content.html?lang=zh-Hant) | 影片 | 了解活動行銷團隊如何創造獨特的內容來吸引線上活動的觀眾。 |
+| 2023 年 9 月 | [創造引人注目的行銷內容](https://experienceleague.adobe.com/docs/creative-cloud-enterprise-learn/cce-learning-hub/expressoverview/expressusecase/compelling-merchandise.html) | 影片 | 了解商務團隊如何輕鬆為其線上商店中的一組新庫存建立引人注目的圖像。 |
+| 2023 年 9 月 | [讓行銷團隊有能力創造多通路內容](https://experienceleague.adobe.com/docs/creative-cloud-enterprise-learn/cce-learning-hub/expressoverview/expressusecase/multi-channel-marketing-content.html) | 影片 | 了解活動行銷團隊如何創造獨特的內容來吸引線上活動的觀眾。 |
 | 2023 年 9 月 | [讓分散式團隊有能力進行內容本地化](https://experienceleague.adobe.com/docs/creative-cloud-enterprise-learn/cce-learning-hub/expressoverview/expressusecase/localized-marketing-content.html?lang=zh-Hant) | 影片 | 了解分散式區域行銷團隊如何輕鬆地根據其所在區域自訂內容以進行本地行銷活動。 |
 
 如需了解最新教學課程，請參閱[適用於企業的 Creative Cloud 教學課程](https://experienceleague.adobe.com/docs/creative-cloud-enterprise-learn/cce-learning-hub/overview.html?lang=zh-Hant)。
